--- a/.github/workflows/community-health-compliance.yml
+++ b/.github/workflows/community-health-compliance.yml
@@ -1,6 +1,11 @@
 name: Enforce Community Files
 
 on:
+  workflow_dispatch:
+
+  pull_request:
+    branches:
+      - main
   push:
     branches:
       - main
@@ -10,6 +15,8 @@ on:
 jobs:
   check-community-files:
     runs-on: ubuntu-latest
+    permissions:
+      issues: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -18,8 +25,7 @@ jobs:
         id: file_check
         run: |
           REQUIRED_FILES=(
-            "CODE_OF_CONDUCT.md"
-            "CONTRIBUTING.md"
+            "README.md"
             "SUPPORT.md"
           )
           
@@ -38,3 +44,10 @@ jobs:
         run: |
           echo "The following required files are missing from the repository: ${{ steps.file_check.outputs.missing_files }}"
           exit 1
+
+      - name: Create issue on failure
+        if: ${{ failure() }}
+        run: |
+          gh issue create --title "Missing community file" --body "This issue was created automatically this repository is missing mandatory files: ${{ steps.file_check.outputs.missing_files }}"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
